--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,7 +55,7 @@ AWS mysql 5.5:
   tags:
     - aws
 
-.AWS mysql mariadb:
+AWS mysql mariadb:
   variables:
     AWS_REGION: us-east-1
   stage: deployment test
@@ -64,7 +64,7 @@ AWS mysql 5.5:
   tags:
     - aws
 
-.AWS mysql-8.0:
+AWS mysql-8.0:
   variables:
     AWS_REGION: us-east-1
   stage: deployment test
@@ -73,7 +73,7 @@ AWS mysql 5.5:
   tags:
     - aws
 
-.EPC mysql-5.5:
+EPC mysql-5.5:
   variables:
     EPC_REGION: EPAM-BY2
   stage: deployment test
@@ -82,7 +82,7 @@ AWS mysql 5.5:
   tags:
     - delegated
 
-.EPC mysql-5.6:
+EPC mysql-5.6:
   variables:
     EPC_REGION: EPAM-BY2
   stage: deployment test
@@ -91,7 +91,7 @@ AWS mysql 5.5:
   tags:
     - delegated
 
-.EPC mysql-5.7:
+EPC mysql-5.7:
   variables:
     EPC_REGION: EPAM-BY2
   stage: deployment test
@@ -100,7 +100,7 @@ AWS mysql 5.5:
   tags:
     - delegated
 
-.EPC mariadb:
+EPC mariadb:
   variables:
     EPC_REGION: EPAM-BY2
   stage: deployment test
