--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,14 +20,14 @@ Ansible lint:
   tags:
     - aws
 
-Docker mysql:
+.Docker mysql:
   stage: deployment test
   script:
     - molecule test -s default
   tags:
     - aws
 
-AWS mysql 5.7:
+.AWS mysql 5.7:
   variables:
     AWS_REGION: us-east-1
   stage: deployment test
@@ -37,7 +37,7 @@ AWS mysql 5.7:
     - aws
 
 
-AWS mysql 5.6:
+.AWS mysql 5.6:
   variables:
     AWS_REGION: us-east-1
   stage: deployment test
@@ -46,7 +46,7 @@ AWS mysql 5.6:
   tags:
     - aws
 
-AWS mysql 5.5:
+.AWS mysql 5.5:
   variables:
     AWS_REGION: us-east-1
   stage: deployment test
@@ -55,7 +55,7 @@ AWS mysql 5.5:
   tags:
     - aws
 
-AWS mysql mariadb:
+.AWS mysql mariadb:
   variables:
     AWS_REGION: us-east-1
   stage: deployment test
@@ -73,7 +73,7 @@ AWS mysql-8.0:
   tags:
     - aws
 
-EPC mysql-5.5:
+.EPC mysql-5.5:
   variables:
     EPC_REGION: EPAM-BY2
   stage: deployment test
@@ -82,7 +82,7 @@ EPC mysql-5.5:
   tags:
     - delegated
 
-EPC mysql-5.6:
+.EPC mysql-5.6:
   variables:
     EPC_REGION: EPAM-BY2
   stage: deployment test
@@ -100,7 +100,7 @@ EPC mysql-5.7:
   tags:
     - delegated
 
-EPC mariadb:
+.EPC mariadb:
   variables:
     EPC_REGION: EPAM-BY2
   stage: deployment test
