--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,14 +20,14 @@ Ansible lint:
   tags:
     - aws
 
-Docker mysql:
+.Docker mysql:
   stage: deployment test
   script:
     - molecule test -s default
   tags:
     - aws
 
-AWS mysql 5.7:
+.AWS mysql 5.7:
   variables:
     AWS_REGION: us-east-1
   stage: deployment test
@@ -37,7 +37,7 @@ AWS mysql 5.7:
     - aws
 
 
-AWS mysql 5.6:
+.AWS mysql 5.6:
   variables:
     AWS_REGION: us-east-1
   stage: deployment test
@@ -46,7 +46,7 @@ AWS mysql 5.6:
   tags:
     - aws
 
-AWS mysql 5.5:
+.AWS mysql 5.5:
   variables:
     AWS_REGION: us-east-1
   stage: deployment test
@@ -64,7 +64,7 @@ AWS mysql mariadb:
   tags:
     - aws
 
-AWS mysql-8.0:
+.AWS mysql-8.0:
   variables:
     AWS_REGION: us-east-1
   stage: deployment test
@@ -91,7 +91,7 @@ AWS mysql-8.0:
   tags:
     - delegated
 
-EPC mysql-5.7:
+.EPC mysql-5.7:
   variables:
     EPC_REGION: EPAM-BY2
   stage: deployment test
